Restore Vector.filter and Vector.map to original spec (bug 513095 r=stejohns+ sr=edwsmith+)